# green_crdt

./: CMakeLists.txt
.github/workflows/: ci.yml
version3/: CMakeLists.txt  test1.cpp  test2.cpp
version3/green_crdt/v3/: list.hpp  text_document.hpp
